--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						
+						<p class="copyright">&copy; 2019 &nbsp; Jeffrey Guo</p>
 						<!--
 						<section>
 							<h2>Aliquam sed mauris</h2>
